# amplifier-hive-slack

./: .gitignore  README.md  pyproject.toml
config/: example.yaml  personal.yaml  slack-manifest.yaml
context/: hive-slack-environment.md
docs/: ADMIN_UI_DESIGN.md  INJECTABLE_ORCHESTRATOR.md  MILESTONE_3_PLAN.md  MILESTONE_4_DESIGN.md  ONBOARDING_PLAN.md  PERSONAL_SERVICE_PLAN.md  SLACK_FREE_TIER.md
docs/plans/: 2026-02-09-rich-status-messages-implementation.md
modules/loop-interactive/: pyproject.toml
modules/loop-interactive/amplifier_module_loop_interactive/: __init__.py
planning/: proactive-failure-notifications.md
src/hive_slack/: __init__.py  approval.py  async_recipes.py  config.py  connection.py  dispatch.py  display.py  formatting.py  main.py  media_tools.py  onboarding.py  service.py  service_manager.py  setup.py  slack.py  slack_manifest.py  task_store.py  test_harness.py  tools.py  worker_manager.py
src/hive_slack/admin/: __init__.py  auth.py  configuration.py  dashboard.py  logs.py  shared.py  slack_setup.py
tests/: conftest.py  test_admin.py  test_approval.py  test_async_recipes.py  test_config.py  test_connection.py  test_dispatch.py  test_display.py  test_onboarding.py  test_orchestrator.py  test_service.py  test_service_manager.py  test_setup.py  test_slack.py  test_slack_manifest.py  test_task_store.py  test_tools.py
