[project]
name = "amplifier-module-loop-interactive"
version = "0.1.0.dev0"
description = "Interactive orchestrator with mid-execution injection and force-respond (vendored for hive-slack)"
requires-python = ">=3.11"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
loop-interactive = "amplifier_module_loop_interactive:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
